Revision history for Perl extension Promises

0.05
    - catch exceptions in any callback and
      call reject if they happen

0.04 Thursday, Oct. 17, 2013
    *** DEPRECATION WARNING ***
    - The 'when' helper in Promises.pm is being
      deprecated because it clashes with the
      perl keyword. See RT #84024 for more info.
    - 'when' renamed to 'collect'
        - tests and docs adjusted accordingly

0.03 Sunday, Feb. 17th, 2013
    - added a `deferred` helper function to Promises.pm

    - fixed the reject call in `when`
      (thanks to rafl for this)
        - added tests for this

    - large doc reworking
        - moved things into a cookbook
        - added example of usage with Mojo::IOLoop
        - added comparison with Scala futures
            - this still needs some work, but the
              basics are ther

0.02 Saturday, Nov. 24th, 2012
    - add several predicate methods to help when
      interrogating status, this resolves RT #81278.
        - thanks to Toby Inkster for this
    - fixed error chaining so that the result of an
      error in one step of the chain will be passed
      onto the next step as well, this resolves
      RT #81358.
        - thanks to TOSHIOITO for this
    - made error callbacks optional and ensured that
      the errors will bubble to the next promise in
      the chain, this resolves RT #81356.
        - thanks again to TOSHIOITO for this

0.01 Friday, Nov. 16th, 2012
    - First release to an unsuspecting world